--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,24 @@
 .grid {
   /* make a grid */
  margin: 100px 0 0;
-
 }
 
+.grid-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.algo-button {
+  margin: 10px;
+  padding: 10px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+}
 
 .node {
   width: 25px;
@@ -18,6 +33,13 @@
 
 .node-start {
   background-color: green;
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  margin: 10px;
+  row-gap: 10px;
 }
 
 .node-visited {
